--- a/views/index.pug
+++ b/views/index.pug
@@ -38,4 +38,4 @@ block content
 block scripts
 
     //- HiredGrad
-    script(src="http://hiredgrad.com/rest/resources/society/js/57e3b53ce4b0db35d5037a80/branded")
+    //script(src="http://hiredgrad.com/rest/resources/society/js/57e3b53ce4b0db35d5037a80/branded")
