--- a/views/templates/base.pug
+++ b/views/templates/base.pug
@@ -16,5 +16,5 @@ html(lang="en")
         block footer
             .footer
                 div
-                    p &copy; 2016-#{currentYear} #[a(href="https://www.compsoc.tech/") Durham University Computing Society] <br /> <span style="font-size:10px">Durham University Computing Society is a student group affiliated with #[a(href="https://durhamsu.com") Durham Students' Union], which is registered in England as a company limited by guarantee (07689815) and a charity (1145400). Durham Students' Union's registered office is Dunelm House, New Elvet, Durham, DH1 3AN.</span>
+                    p &copy; 2016-#{currentYear} #[a(href="https://www.compsoc.tech/") Durham University Computing Society] <br /> <span style="font-size:1rem">Durham University Computing Society is a student group affiliated with #[a(href="https://durhamsu.com") Durham Students' Union], which is registered in England as a company limited by guarantee (07689815) and a charity (1145400). Durham Students' Union's registered office is Dunelm House, New Elvet, Durham, DH1 3AN.</span>
         block scripts
