--- a/public/indexStyle.css
+++ b/public/indexStyle.css
@@ -73,9 +73,10 @@ object {
 .footer {
     background-color: #333;
     display: flex;
-    height: 6em;
+    min-height: 6em;
     color: #9d9d9d;
     text-align:center;
+    height: auto;
 }
 
 .footer div {
@@ -137,4 +138,17 @@ html, body {
 
 .information {
     font-size: medium !important;
+}
+
+hr {
+    border-top: 1px solid #dcdcdc;
+}
+
+.container img {
+    max-width: 100%;
+}
+
+.typeformButton a {
+    border-color: #398439;
+    transition: all 0.15s;
 }
