--- a/views/team.pug
+++ b/views/team.pug
@@ -2,126 +2,212 @@ extends layouts/banner-content.pug
 include ./pageBanner.pug
 
 block append head
-    title The Team - DUCompSoc
-    link(href="/team.css" rel="stylesheet")
+  title The Team - DUCompSoc
+  link(href="/team.css" rel="stylesheet")
+  link(rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous")
 
 block title
-    +pageBanner('The Team', 'Meet the students shaping the society')
+  +pageBanner('The Team', 'Meet the students shaping the society')
 
 block content
-    .container
-        div.row
-            h2 The Exec
-            div.col-md-1
+  .container
+    .row
+      p.large-text#exec-description
+        | The Executive Officers of CompSoc exist to manage and run the society. They are passionate about teaching,
+        | putting on events for the society and ensuring it is a fun place for all who are enthused about technology.
 
-            div.col-md-2
+    .row
+      .panel-group
+        .panel.panel-default.panel-default-cards
+          .panel-heading
+            h3
+              a(data-toggle="collapse" href="#ex89") 2018/19
+          #ex89.panel-collapse.collapse.in(aria-expanded="true")
+            .panel-body.panel-body-cards
+                .row
+                  .col-md-6
+                    .panel.panel-info
+                      .panel-heading
+                        h3 President<br>Robbie Jakob-Whitworth
+                      .div#president-description
+                        .row
+                          .col-md-9
+                            p.description
+                              | In charge of overseeing everything in the society.
+                          .col-md-3.no-padding
+                            img(src="./img/team/Robbie Jakob-Whitworth.jpg").exec-photo
+                  .col-md-6
+                    .panel.panel-info
+                      .panel-heading
+                        h3 Treasurer<br>Jessica Ng
+                      .div#president-description
+                        .row
+                          .col-md-9
+                            p.description
+                              | Manages CompSoc's finances.
+                          .col-md-3.no-padding
+                            img(src="./img/team/placeholder.png").exec-photo
+
+                .row
+                  .col-md-6
+                    .panel.panel-info
+                      .panel-heading
+                        h3 Secretary<br>Vivek Mehta
+                      .div#president-description
+                        .row
+                          .col-md-9
+                            p.description
+                              | Responsible for working with sponsors and other organisations to ensure CompSoc runs smoothly, handling
+                              | contracts and paperwork.
+                          .col-md-3.no-padding
+                            img(src="./img/team/placeholder.png").exec-photo
+                  .col-md-6
+                    .panel.panel-info
+                      .panel-heading
+                        h3 Education Officer<br>Mitchel Starkie
+                      .div#president-description
+                        .row
+                          .col-md-9
+                            p.description
+                              | In charge of educating both society members and/or those interested in programming but with little technical experience.
+                          .col-md-3.no-padding
+                            img(src="./img/team/placeholder.png").exec-photo
+                .row
+                  .col-md-6
+                    .panel.panel-info
+                      .panel-heading
+                        h3 Publicity Officer<br>Kat Strachan
+                      .div#president-description
+                        .row
+                          .col-md-9
+                            p.description
+                              | In charge of the website content, social media, the mailing list, and promoting the society around the university.
+                          .col-md-3.no-padding
+                            img(src="./img/team/placeholder.png").exec-photo
+                  .col-md-6
+                    .panel.panel-info
+                      .panel-heading
+                        h3 Technical Web Officer<br>Soumya Singh
+                      .div#president-description
+                        .row
+                          .col-md-9
+                            p.description
+                              | Works with the Publicity Officer to manage the technical side of the website.
+                          .col-md-3.no-padding
+                            img(src="./img/team/placeholder.png").exec-photo
+                .row
+                  .col-md-6
+                    .panel.panel-info
+                      .panel-heading
+                        h3 Events Officer<br>Karl Southern
+                      .div#president-description
+                        .row
+                          .col-md-9
+                            p.description
+                              | Works with sponsors and guest speakers to organise talks and workshops.
+                          .col-md-3.no-padding
+                            img(src="./img/team/placeholder.png").exec-photo
+                  .col-md-6
+                    .panel.panel-info
+                      .panel-heading
+                        h3 Officers without Portfolio<br>Dmytro Drobisher and Henrike Gbinigie
+                      .div#president-description
+                        .row
+                          .col-md-9
+                            p.description
+                              | General helping hands for all parts of the society.
+                          .col-md-3.no-padding
+                            img(src="./img/team/placeholder.png").exec-photo
+      div.panel-group.new-panel-group
+        div.panel.panel-default.new-panel-default
+          div.panel-heading.new-panel-heading
+            h3
+              a(data-toggle="collapse" href="#ex78") 2017/18
+          #ex78.panel-collapse.collapse
+            div.panel-body
+              //- Rewrite to be more pugish?
+              .row
+                div.col-md-1
+                div.col-md-2
+                  h3 President
+                  img(src="./img/team/Robbie Jakob-Whitworth.jpg").exec-photo
+                  h3 Robbie Jakob-Whitworth
+                div.col-md-2
+                  h3 Secretary
+                  img(src="./img/team/Vivek Mehta.png").exec-photo
+                  h3 Vivek Mehta
+                div.col-md-2
+                  h3 Treasurer
+                  img(src="./img/team/Tom O'Leary.jpg").exec-photo
+                  h3 Tom O'Leary
+                div.col-md-2
+                  h3 Web Officer
+                  img(src="./img/team/soumya2.png").exec-photo
+                  h3 Soumya Singh
+                div.col-md-2
+                  h3 Social Sec
+                  img(src="./img/team/ryota.png").exec-photo
+                  h3 Ryota Sakai
+                div.col-md-1
+
+      div.panel-group
+        div.panel.panel-default
+          div.panel-heading
+            h3
+              a(data-toggle="collapse" href="#ex67") 2016/17
+          #ex67.panel-collapse.collapse
+            div.panel-body
+              div.col-md-3
                 h3 President
-                p Manages everything and ensures that CompSoc runs smoothly.
-            div.col-md-2
+                img(src="./img/team/Alistair Madden.png").exec-photo
+                h3 Alistair Madden
+              div.col-md-3
                 h3 Secretary
-                p Takes care of sponsors, contracts, paperwork etc.
-            div.col-md-2
+                img(src="./img/team/placeholder.png").exec-photo
+                h3 Mitchel Starkie
+              div.col-md-3
                 h3 Treasurer
-                p Handles the financial matters of CompSoc.
-            div.col-md-2
+                img(src="./img/team/Sara Chen.png").exec-photo
+                h3 Sara Chen
+              div.col-md-3
                 h3 Web Officer
-                p Manages the website, the regular updates and the technical side of the society.
-            div.col-md-2
-                h3 Social Sec
-                p Organizes socials and events.
-            div.col-md-1
+                img(src="./img/team/Soumya Singh.jpg").exec-photo
+                h3 Soumya Singh
 
-        div.row
-            div.panel-group
-                div.panel.panel-default
-                    div.panel-heading
-                        h3
-                            a(data-toggle="collapse" href="#ex78") 2017/18
-                    #ex78.panel-collapse.collapse
-                        div.panel-body
-                            //- Rewrite to be more pugish?
-                            .row
-                                div.col-md-1
-                                div.col-md-2
-                                    h3 President
-                                    img(src="./img/team/Robbie Jakob-Whitworth.jpg").exec-photo
-                                    h3 Robbie Jakob-Whitworth
-                                div.col-md-2
-                                    h3 Secretary
-                                    img(src="./img/team/Vivek Mehta.png").exec-photo
-                                    h3 Vivek Mehta
-                                div.col-md-2
-                                    h3 Treasurer
-                                    img(src="./img/team/Tom O'Leary.jpg").exec-photo
-                                    h3 Tom O'Leary
-                                div.col-md-2
-                                    h3 Web Officer
-                                    img(src="./img/team/soumya2.png").exec-photo
-                                    h3 Soumya Singh
-                                div.col-md-2
-                                    h3 Social Sec
-                                    img(src="./img/team/ryota.png").exec-photo
-                                    h3 Ryota Sakai
-                                div.col-md-1
+      div.panel-group
+        div.panel.panel-default
+          div.panel-heading
+            h3
+              a(data-toggle="collapse" href="#ex56") 2015/16
+          #ex56.panel-collapse.collapse
+            div.panel-body
+                div.col-md-2
+                  h3 President
+                  img(src="./img/team/Alistair Madden.png").exec-photo
+                  h3 Alistair Madden
+                div.col-md-2
+                  h3 Secretary
+                  img(src="./img/team/placeholder.png").exec-photo
+                  h3 Ersil Jabbar
+                div.col-md-2
+                  h3 Treasurer
+                  img(src="./img/team/placeholder.png").exec-photo
+                  h3 Raffe-ul Islam
+                div.col-md-2
+                  h3 Publicity
+                  img(src="./img/team/placeholder.png").exec-photo
+                  h3 Alan Go
+                div.col-md-2
+                  h3 Web Officer
+                  img(src="./img/team/placeholder.png").exec-photo
+                  h3 Ram Gupta
+                div.col-md-2
+                  h3 Librarian
+                  img(src="./img/team/placeholder.png").exec-photo
+                  h3 Gabor Veres
 
-            div.panel-group
-                div.panel.panel-default
-                    div.panel-heading
-                        h3
-                            a(data-toggle="collapse" href="#ex67") 2016/17
-                    #ex67.panel-collapse.collapse
-                        div.panel-body
-                            div.col-md-3
-                                h3 President
-                                img(src="./img/team/Alistair Madden.png").exec-photo
-                                h3 Alistair Madden
-                            div.col-md-3
-                                h3 Secretary
-                                img(src="./img/team/placeholder.png").exec-photo
-                                h3 Mitchel Starkie
-                            div.col-md-3
-                                h3 Treasurer
-                                img(src="./img/team/Sara Chen.png").exec-photo
-                                h3 Sara Chen
-                            div.col-md-3
-                                h3 Web Officer
-                                img(src="./img/team/Soumya Singh.jpg").exec-photo
-                                h3 Soumya Singh
-
-            div.panel-group
-                div.panel.panel-default
-                    div.panel-heading
-                        h3
-                            a(data-toggle="collapse" href="#ex56") 2015/16
-                    #ex56.panel-collapse.collapse
-                        div.panel-body
-                                div.col-md-2
-                                    h3 President
-                                    img(src="./img/team/Alistair Madden.png").exec-photo
-                                    h3 Alistair Madden
-                                div.col-md-2
-                                    h3 Secretary
-                                    img(src="./img/team/placeholder.png").exec-photo
-                                    h3 Ersil Jabbar
-                                div.col-md-2
-                                    h3 Treasurer
-                                    img(src="./img/team/placeholder.png").exec-photo
-                                    h3 Raffe-ul Islam
-                                div.col-md-2
-                                    h3 Publicity
-                                    img(src="./img/team/placeholder.png").exec-photo
-                                    h3 Alan Go
-                                div.col-md-2
-                                    h3 Web Officer
-                                    img(src="./img/team/placeholder.png").exec-photo
-                                    h3 Ram Gupta
-                                div.col-md-2
-                                    h3 Librarian
-                                    img(src="./img/team/placeholder.png").exec-photo
-                                    h3 Gabor Veres
-
-        div.row
-            h2 Contributors
-            div.col-md-12
-                h3 Design and Assets
-                p <b>Molly Watkins</b> designed our lovely homepage banner and the society logo.
+    div.row
+      h2 Contributors
+      div.col-md-12
+        h3 Design and Assets
+        p <b>Molly Watkins</b> designed our lovely homepage banner and the society logo.
