--- a/views/team.pug
+++ b/views/team.pug
@@ -19,7 +19,7 @@ block content
     .row
       .panel-group
         .panel.panel-default.panel-default-cards
-          .panel-heading
+          .panel-heading.panel-heading-cards
             h3
               a(data-toggle="collapse" href="#ex89") 2018/19
           #ex89.panel-collapse.collapse.in(aria-expanded="true")
@@ -29,7 +29,7 @@ block content
                     .panel.panel-info
                       .panel-heading
                         h3 President<br>Robbie Jakob-Whitworth
-                      .div#president-description
+                      #president-description
                         .row
                           .col-md-9
                             p.description
@@ -40,7 +40,7 @@ block content
                     .panel.panel-info
                       .panel-heading
                         h3 Treasurer<br>Jessica Ng
-                      .div#president-description
+                      #president-description
                         .row
                           .col-md-9
                             p.description
@@ -53,7 +53,7 @@ block content
                     .panel.panel-info
                       .panel-heading
                         h3 Secretary<br>Vivek Mehta
-                      .div#president-description
+                      #president-description
                         .row
                           .col-md-9
                             p.description
@@ -65,7 +65,7 @@ block content
                     .panel.panel-info
                       .panel-heading
                         h3 Education Officer<br>Mitchel Starkie
-                      .div#president-description
+                      #president-description
                         .row
                           .col-md-9
                             p.description
@@ -77,7 +77,7 @@ block content
                     .panel.panel-info
                       .panel-heading
                         h3 Publicity Officer<br>Kat Strachan
-                      .div#president-description
+                      #president-description
                         .row
                           .col-md-9
                             p.description
@@ -88,7 +88,7 @@ block content
                     .panel.panel-info
                       .panel-heading
                         h3 Technical Web Officer<br>Soumya Singh
-                      .div#president-description
+                      #president-description
                         .row
                           .col-md-9
                             p.description
@@ -100,7 +100,7 @@ block content
                     .panel.panel-info
                       .panel-heading
                         h3 Events Officer<br>Karl Southern
-                      .div#president-description
+                      #president-description
                         .row
                           .col-md-9
                             p.description
@@ -111,103 +111,103 @@ block content
                     .panel.panel-info
                       .panel-heading
                         h3 Officers without Portfolio<br>Dmytro Drobisher and Henrike Gbinigie
-                      .div#president-description
+                      #president-description
                         .row
                           .col-md-9
                             p.description
                               | General helping hands for all parts of the society.
                           .col-md-3.no-padding
                             img(src="./img/team/placeholder.png").exec-photo
-      div.panel-group.new-panel-group
-        div.panel.panel-default.new-panel-default
-          div.panel-heading.new-panel-heading
+      .panel-group
+        .panel.panel-default
+          .panel-heading
             h3
               a(data-toggle="collapse" href="#ex78") 2017/18
           #ex78.panel-collapse.collapse
-            div.panel-body
+            .panel-body
               //- Rewrite to be more pugish?
               .row
-                div.col-md-1
-                div.col-md-2
+                .col-md-1
+                .col-md-2
                   h3 President
                   img(src="./img/team/Robbie Jakob-Whitworth.jpg").exec-photo
                   h3 Robbie Jakob-Whitworth
-                div.col-md-2
+                .col-md-2
                   h3 Secretary
                   img(src="./img/team/Vivek Mehta.png").exec-photo
                   h3 Vivek Mehta
-                div.col-md-2
+                .col-md-2
                   h3 Treasurer
                   img(src="./img/team/Tom O'Leary.jpg").exec-photo
                   h3 Tom O'Leary
-                div.col-md-2
+                .col-md-2
                   h3 Web Officer
                   img(src="./img/team/soumya2.png").exec-photo
                   h3 Soumya Singh
-                div.col-md-2
+                .col-md-2
                   h3 Social Sec
                   img(src="./img/team/ryota.png").exec-photo
                   h3 Ryota Sakai
-                div.col-md-1
+                .col-md-1
 
-      div.panel-group
-        div.panel.panel-default
-          div.panel-heading
+      .panel-group
+        .panel.panel-default
+          .panel-heading
             h3
               a(data-toggle="collapse" href="#ex67") 2016/17
           #ex67.panel-collapse.collapse
-            div.panel-body
-              div.col-md-3
+            .panel-body
+              .col-md-3
                 h3 President
                 img(src="./img/team/Alistair Madden.png").exec-photo
                 h3 Alistair Madden
-              div.col-md-3
+              .col-md-3
                 h3 Secretary
                 img(src="./img/team/placeholder.png").exec-photo
                 h3 Mitchel Starkie
-              div.col-md-3
+              .col-md-3
                 h3 Treasurer
                 img(src="./img/team/Sara Chen.png").exec-photo
                 h3 Sara Chen
-              div.col-md-3
+              .col-md-3
                 h3 Web Officer
                 img(src="./img/team/Soumya Singh.jpg").exec-photo
                 h3 Soumya Singh
 
-      div.panel-group
-        div.panel.panel-default
-          div.panel-heading
+      .panel-group
+        .panel.panel-default
+          .panel-heading
             h3
               a(data-toggle="collapse" href="#ex56") 2015/16
           #ex56.panel-collapse.collapse
-            div.panel-body
-                div.col-md-2
+            .panel-body
+                .col-md-2
                   h3 President
                   img(src="./img/team/Alistair Madden.png").exec-photo
                   h3 Alistair Madden
-                div.col-md-2
+                .col-md-2
                   h3 Secretary
                   img(src="./img/team/placeholder.png").exec-photo
                   h3 Ersil Jabbar
-                div.col-md-2
+                .col-md-2
                   h3 Treasurer
                   img(src="./img/team/placeholder.png").exec-photo
                   h3 Raffe-ul Islam
-                div.col-md-2
+                .col-md-2
                   h3 Publicity
                   img(src="./img/team/placeholder.png").exec-photo
                   h3 Alan Go
-                div.col-md-2
+                .col-md-2
                   h3 Web Officer
                   img(src="./img/team/placeholder.png").exec-photo
                   h3 Ram Gupta
-                div.col-md-2
+                .col-md-2
                   h3 Librarian
                   img(src="./img/team/placeholder.png").exec-photo
                   h3 Gabor Veres
 
-    div.row
+    .row
       h2 Contributors
-      div.col-md-12
+      .col-md-12
         h3 Design and Assets
         p <b>Molly Watkins</b> designed our lovely homepage banner and the society logo.
