--- a/public/indexStyle.css
+++ b/public/indexStyle.css
@@ -73,7 +73,7 @@ object {
 .footer {
     background-color: #333;
     display: flex;
-    min-height: 6em;
+    min-height: 5em;
     color: #9d9d9d;
     text-align:center;
     height: auto;
@@ -84,7 +84,8 @@ object {
 }
 
 .footer p {
-    text-align:center;
+    text-align: center;
+    margin-bottom: 0;
 }
 
 .footer a {
@@ -108,7 +109,7 @@ html, body {
 
 /* Height of navbar minus height of footer */
 .wrapper {
-    min-height: calc(100vh - 50px - 6em);
+    min-height: calc(100vh - 50px - 5em);
 }
 
 .hiredGradButton {
