Update exec page title

--- a/views/team.pug
+++ b/views/team.pug
@@ -2,7 +2,7 @@ extends layouts/banner-content.pug
 include ./pageBanner.pug
 
 block append head
-  title The Team - DUCompSoc
+  title The Team - Durham CompSoc
   link(href="/team.css" rel="stylesheet")
   link(rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous")
 
