Bold exec titles

--- a/views/team.pug
+++ b/views/team.pug
@@ -28,19 +28,19 @@ block content
                   .col-md-6
                     .panel.panel-info
                       .panel-heading
-                        h3 President<br>Robbie Jakob-Whitworth
+                        h3 #[strong President]<br>Robbie Jakob-Whitworth
                       #president-description
                         .row
                           .col-md-9
                             p.description
-                              | In charge of overseeing everything in the society.
+                              | In charge of overseeing everything in the society and reaching out to sponsors.
                           .col-md-3.no-padding
                             img(src="./img/team/Robbie Jakob-Whitworth.jpg").exec-photo
                   .col-md-6
                     .panel.panel-info
                       .panel-heading
-                        h3 Treasurer<br>Jessica Ng
-                      #president-description
+                        h3 #[strong Treasurer]<br>Jessica Ng
+                      #treasurer-description
                         .row
                           .col-md-9
                             p.description
@@ -52,8 +52,8 @@ block content
                   .col-md-6
                     .panel.panel-info
                       .panel-heading
-                        h3 Secretary<br>Vivek Mehta
-                      #president-description
+                        h3 #[strong Secretary]<br>Vivek Mehta
+                      #secretary-description
                         .row
                           .col-md-9
                             p.description
@@ -64,8 +64,8 @@ block content
                   .col-md-6
                     .panel.panel-info
                       .panel-heading
-                        h3 Education Officer<br>Mitchel Starkie
-                      #president-description
+                        h3 #[strong Education Officer]<br>Mitchel Starkie
+                      #education-officer-description
                         .row
                           .col-md-9
                             p.description
@@ -76,8 +76,8 @@ block content
                   .col-md-6
                     .panel.panel-info
                       .panel-heading
-                        h3 Publicity Officer<br>Kat Strachan
-                      #president-description
+                        h3 #[strong Publicity Officer]<br>Kat Strachan
+                      #publicity-officer-description
                         .row
                           .col-md-9
                             p.description
@@ -87,8 +87,8 @@ block content
                   .col-md-6
                     .panel.panel-info
                       .panel-heading
-                        h3 Technical Web Officer<br>Soumya Singh
-                      #president-description
+                        h3 #[strong Technical Web Officer]<br>Soumya Singh
+                      #technical-web-officer-description
                         .row
                           .col-md-9
                             p.description
@@ -99,8 +99,8 @@ block content
                   .col-md-6
                     .panel.panel-info
                       .panel-heading
-                        h3 Events Officer<br>Karl Southern
-                      #president-description
+                        h3 #[strong Events Officer]<br>Karl Southern
+                      #events-officer-description
                         .row
                           .col-md-9
                             p.description
@@ -110,8 +110,8 @@ block content
                   .col-md-6
                     .panel.panel-info
                       .panel-heading
-                        h3 Officers without Portfolio<br>Dmytro Drobisher and Henrike Gbinigie
-                      #president-description
+                        h3 #[strong Officers without Portfolio]<br>Dmytro Drobisher and Henrike Gbinigie
+                      #owp-description
                         .row
                           .col-md-9
                             p.description
@@ -128,23 +128,23 @@ block content
               .row
                 .col-md-1
                 .col-md-2
-                  h3 President
+                  h3 #[strong President]
                   img(src="./img/team/Robbie Jakob-Whitworth.jpg").exec-photo
                   h3 Robbie Jakob-Whitworth
                 .col-md-2
-                  h3 Secretary
+                  h3 #[strong Secretary]
                   img(src="./img/team/Vivek Mehta.png").exec-photo
                   h3 Vivek Mehta
                 .col-md-2
-                  h3 Treasurer
+                  h3 #[strong Treasurer]
                   img(src="./img/team/Tom O'Leary.jpg").exec-photo
                   h3 Tom O'Leary
                 .col-md-2
-                  h3 Web Officer
+                  h3 #[strong Web Officer]
                   img(src="./img/team/soumya2.png").exec-photo
                   h3 Soumya Singh
                 .col-md-2
-                  h3 Social Sec
+                  h3 #[strong Social Sec]
                   img(src="./img/team/ryota.png").exec-photo
                   h3 Ryota Sakai
                 .col-md-1
@@ -157,19 +157,19 @@ block content
           #ex67.panel-collapse.collapse
             .panel-body
               .col-md-3
-                h3 President
+                h3 #[strong President]
                 img(src="./img/team/Alistair Madden.png").exec-photo
                 h3 Alistair Madden
               .col-md-3
-                h3 Secretary
+                h3 #[strong Secretary]
                 img(src="./img/team/placeholder.png").exec-photo
                 h3 Mitchel Starkie
               .col-md-3
-                h3 Treasurer
+                h3 #[strong Treasurer]
                 img(src="./img/team/Sara Chen.png").exec-photo
                 h3 Sara Chen
               .col-md-3
-                h3 Web Officer
+                h3 #[strong Web Officer]
                 img(src="./img/team/Soumya Singh.jpg").exec-photo
                 h3 Soumya Singh
 
@@ -181,27 +181,27 @@ block content
           #ex56.panel-collapse.collapse
             .panel-body
                 .col-md-2
-                  h3 President
+                  h3 #[strong President]
                   img(src="./img/team/Alistair Madden.png").exec-photo
                   h3 Alistair Madden
                 .col-md-2
-                  h3 Secretary
+                  h3 #[strong Secretary]
                   img(src="./img/team/placeholder.png").exec-photo
                   h3 Ersil Jabbar
                 .col-md-2
-                  h3 Treasurer
+                  h3 #[strong Treasurer]
                   img(src="./img/team/placeholder.png").exec-photo
                   h3 Raffe-ul Islam
                 .col-md-2
-                  h3 Publicity
+                  h3 #[strong Publicity]
                   img(src="./img/team/placeholder.png").exec-photo
                   h3 Alan Go
                 .col-md-2
-                  h3 Web Officer
+                  h3 #[strong Web Officer]
                   img(src="./img/team/placeholder.png").exec-photo
                   h3 Ram Gupta
                 .col-md-2
-                  h3 Librarian
+                  h3 #[strong Librarian]
                   img(src="./img/team/placeholder.png").exec-photo
                   h3 Gabor Veres
 
