Fix events sign-up link

--- a/views/events.pug
+++ b/views/events.pug
@@ -24,7 +24,7 @@ block content
             p.information Mark your calendars for these upcoming events!
 
             .row
-                blockquote We have a couple of projects in the works for after exams – #[a(href="https://ducompsoc.typeform.com/to/bMrpxS" target="_blank") sign up to our mailing list] to be the first to hear about them!
+                blockquote We have a couple of projects in the works for after exams – <a class="typeform-share link" href="https://ducompsoc.typeform.com/to/bMrpxS" data-mode="drawer_right" target="_blank">sign up to our mailing list</a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> to be the first to hear about them!
 
 
         .col-md-6
