Make exec roles bold using CSS

--- a/public/team.css
+++ b/public/team.css
@@ -71,3 +71,7 @@ body .wrapper {
     border: 1px solid #ddd !important;
     box-shadow: 0 1px 1px rgba(0,0,0,.05);
 }
+
+.position {
+    font-weight:bold;
+}
