--- a/views/team.pug
+++ b/views/team.pug
@@ -28,8 +28,9 @@ block content
                   .col-md-6
                     .panel.panel-info
                       .panel-heading
-                        h3 #[strong President]<br>Robbie Jakob-Whitworth
-                      #president-description
+                        h3.position President
+                        h3.exec-name Robbie Jakob-Whitworth
+                      .panel-content
                         .row
                           .col-md-9
                             p.description
@@ -39,8 +40,9 @@ block content
                   .col-md-6
                     .panel.panel-info
                       .panel-heading
-                        h3 #[strong Treasurer]<br>Jessica Ng
-                      #treasurer-description
+                        h3.position Treasurer
+                        h3.exec-name Jessica Ng
+                      .panel-content
                         .row
                           .col-md-9
                             p.description
@@ -52,8 +54,9 @@ block content
                   .col-md-6
                     .panel.panel-info
                       .panel-heading
-                        h3 #[strong Secretary]<br>Vivek Mehta
-                      #secretary-description
+                        h3.position Secretary
+                        h3.exec-name Vivek Mehta
+                      .panel-content
                         .row
                           .col-md-9
                             p.description
@@ -64,8 +67,9 @@ block content
                   .col-md-6
                     .panel.panel-info
                       .panel-heading
-                        h3 #[strong Education Officer]<br>Mitchel Starkie
-                      #education-officer-description
+                        h3.position Education Officer
+                        h3.exec-name Mitchel Starkie
+                      .panel-content
                         .row
                           .col-md-9
                             p.description
@@ -76,8 +80,9 @@ block content
                   .col-md-6
                     .panel.panel-info
                       .panel-heading
-                        h3 #[strong Publicity Officer]<br>Kat Strachan
-                      #publicity-officer-description
+                        h3.position Publicity Officer
+                        h3.exec-name Kat Strachan
+                      .panel-content
                         .row
                           .col-md-9
                             p.description
@@ -87,8 +92,9 @@ block content
                   .col-md-6
                     .panel.panel-info
                       .panel-heading
-                        h3 #[strong Technical Web Officer]<br>Soumya Singh
-                      #technical-web-officer-description
+                        h3.position Technical Web Officer
+                        h3.exec-name Soumya Singh
+                      .panel-content
                         .row
                           .col-md-9
                             p.description
@@ -99,8 +105,9 @@ block content
                   .col-md-6
                     .panel.panel-info
                       .panel-heading
-                        h3 #[strong Events Officer]<br>Karl Southern
-                      #events-officer-description
+                        h3.position Events Officer
+                        h3.exec-name Karl Southern
+                      .panel-content
                         .row
                           .col-md-9
                             p.description
@@ -110,8 +117,9 @@ block content
                   .col-md-6
                     .panel.panel-info
                       .panel-heading
-                        h3 #[strong Officers without Portfolio]<br>Dmytro Drobisher and Henrike Gbinigie
-                      #owp-description
+                        h3.position Officers without Portfolio
+                        h3.exec-name Dmytro Drobisher and Henrike Gbinigie
+                      .panel-content
                         .row
                           .col-md-9
                             p.description
@@ -128,23 +136,23 @@ block content
               .row
                 .col-md-1
                 .col-md-2
-                  h3 #[strong President]
+                  h3 President
                   img(src="./img/team/Robbie Jakob-Whitworth.jpg").exec-photo
                   h3 Robbie Jakob-Whitworth
                 .col-md-2
-                  h3 #[strong Secretary]
+                  h3 Secretary
                   img(src="./img/team/Vivek Mehta.png").exec-photo
                   h3 Vivek Mehta
                 .col-md-2
-                  h3 #[strong Treasurer]
+                  h3 Treasurer
                   img(src="./img/team/Tom O'Leary.jpg").exec-photo
                   h3 Tom O'Leary
                 .col-md-2
-                  h3 #[strong Web Officer]
+                  h3 Web Officer
                   img(src="./img/team/soumya2.png").exec-photo
                   h3 Soumya Singh
                 .col-md-2
-                  h3 #[strong Social Sec]
+                  h3 Social Sec
                   img(src="./img/team/ryota.png").exec-photo
                   h3 Ryota Sakai
                 .col-md-1
@@ -157,19 +165,19 @@ block content
           #ex67.panel-collapse.collapse
             .panel-body
               .col-md-3
-                h3 #[strong President]
+                h3 President
                 img(src="./img/team/Alistair Madden.png").exec-photo
                 h3 Alistair Madden
               .col-md-3
-                h3 #[strong Secretary]
+                h3 Secretary
                 img(src="./img/team/placeholder.png").exec-photo
                 h3 Mitchel Starkie
               .col-md-3
-                h3 #[strong Treasurer]
+                h3 Treasurer
                 img(src="./img/team/Sara Chen.png").exec-photo
                 h3 Sara Chen
               .col-md-3
-                h3 #[strong Web Officer]
+                h3 Web Officer
                 img(src="./img/team/Soumya Singh.jpg").exec-photo
                 h3 Soumya Singh
 
@@ -181,27 +189,27 @@ block content
           #ex56.panel-collapse.collapse
             .panel-body
                 .col-md-2
-                  h3 #[strong President]
+                  h3 President
                   img(src="./img/team/Alistair Madden.png").exec-photo
                   h3 Alistair Madden
                 .col-md-2
-                  h3 #[strong Secretary]
+                  h3 Secretary
                   img(src="./img/team/placeholder.png").exec-photo
                   h3 Ersil Jabbar
                 .col-md-2
-                  h3 #[strong Treasurer]
+                  h3 Treasurer
                   img(src="./img/team/placeholder.png").exec-photo
                   h3 Raffe-ul Islam
                 .col-md-2
-                  h3 #[strong Publicity]
+                  h3 Publicity
                   img(src="./img/team/placeholder.png").exec-photo
                   h3 Alan Go
                 .col-md-2
-                  h3 #[strong Web Officer]
+                  h3 Web Officer
                   img(src="./img/team/placeholder.png").exec-photo
                   h3 Ram Gupta
                 .col-md-2
-                  h3 #[strong Librarian]
+                  h3 Librarian
                   img(src="./img/team/placeholder.png").exec-photo
                   h3 Gabor Veres
 
