--- a/views/events.pug
+++ b/views/events.pug
@@ -4,6 +4,8 @@ include ./pageBanner.pug
 block append head
     title Events - Durham CompSoc
     link(href="/events.css" rel="stylesheet")
+    script(defer src="https://embed.typeform.com/embed.js")
+    script(defer src="/js/typeform.js")
 
 block title
     +pageBanner("Events", "Check out our past and future events")
@@ -13,9 +15,12 @@ block content
 
 
         .col-md-12
-            h2 What's On
-            p.information CompSoc holds events all year round, from hackathons to tech-talks to weekly meetings. Come along and learn something new, meet new people and build some awesome stuff.
-            p.information <a class="typeform-share link" href="https://ducompsoc.typeform.com/to/bMrpxS" data-mode="drawer_right" target="_blank">Sign up to our mailing list</a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> to be the first to hear about upcoming events!
+            p.information
+                | CompSoc holds events all year round, from hackathons to tech-talks to weekly meetings. Come along and
+                | learn something new, meet new people and build some awesome stuff.
+            p.information
+                | <button type="button" class="sign-up-link btn-link">Sign up to our mailing list</button> to be the
+                | first to hear about upcoming events!
             p.information Take a look at past and future events:
 
 
@@ -24,7 +29,10 @@ block content
             p.information Mark your calendars for these upcoming events!
 
             .row
-                blockquote We have a couple of projects in the works for after exams – <a class="typeform-share link" href="https://ducompsoc.typeform.com/to/bMrpxS" data-mode="drawer_right" target="_blank">sign up to our mailing list</a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> to be the first to hear about them!
+                blockquote
+                    | We have a couple of projects in the works for after exams –
+                    | <button type = button class="sign-up-link btn-link">sign up to our mailing list</button> to be 
+                    | the first to hear about them!
 
 
         .col-md-6
