Update DurHack webpage

--- a/views/durhack.pug
+++ b/views/durhack.pug
@@ -18,8 +18,9 @@ block content
         #up-info
             h2 DurHack is CompSoc's Flagship Annual Hackathon
             p CompSoc runs a large-scale annual hackathon with students from all sorts of universities from all over the country. At DurHack 2017, we had students come from as far as Croatia!
-            p Planning is well underway for another hackathon in late 2018 – <a class="typeform-share link" href="https://ducompsoc.typeform.com/to/bMrpxS" data-mode="drawer_right" target="_blank">sign up to our mailing list</a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> to be amongst the first to hear about it!
+            p DurHack 2018 is coming soon – see #[a(href = "http://durhack.com") durhack.com]!
             p If you're interested in sponsoring CompSoc's next big hackathon, please #[a(href="/contact") get in touch].
+            p.image #[a(href="https://durhack.com") #[img(src="./img/dh18_light.png")]]
 
             hr
 
