--- a/views/sponsors.pug
+++ b/views/sponsors.pug
@@ -16,8 +16,60 @@ block content
                 div.panel.panel-default
                     div.panel-heading
                         h3
+                            a(data-toggle="collapse" href="#sp18-19") 2018/19
+                    #sp18-19.panel-collapse.collapse.in
+                        div.panel-body
+                            .row.sponsor-row
+                                .col-md-6
+                                    a(href="https://www.scottlogic.com/careers/")
+                                        img.sponsor-img(src="./img/sponsors/scott-logic.jpg")
+                                    p
+                                        | At <b>Scott Logic</b>, we design and build software that transforms the performance of some of the world’s
+                                        | biggest and most demanding organisations, and we're always on the look out for talented individuals
+                                        | to join our team. Our #[a(href="https://www.scottlogic.com/careers/graduates-programme/") Graduate Programme]
+                                        | is a great way to kickstart your technology career. You’ll
+                                        | learn new skills, work on a diverse set of internal and client projects, and figure out what makes a
+                                        | globally successful software team tick.
+
+                                .col-md-6
+                                    a(href="https://www.arista.com/en/careers")
+                                        img.sponsor-img(src="./img/sponsors/arista.svg")
+                                    p
+                                        | <b>Arista Networks</b> was founded to pioneer and deliver software-driven cloud networking solutions for large
+                                        | data center storage and computing environments.
+
+
+
+                            .row.sponsor-row
+                                .col-md-6
+                                    a(href="https://bedegaming.com/careers")
+                                        img.sponsor-img(src="./img/sponsors/bede.png")
+                                    p
+                                        | <b>Bede Gaming</b> is a leading supplier of software to the online gambling industry. We offer world class
+                                        | platforms to gaming and betting operators, powering some of the market’s biggest brands and processing hundreds
+                                        | of millions of transactions per month. Bede provides innovative solutions to achieve digital ambitions. Built
+                                        | on a single-code base and API-led, means that our products act as the enabler to operators&rsquo; online objectives.
+                                        | Easily integrated with any 3<sup>rd</sup> party supplier, Bede gives back choice and flexibility to customers.
+
+                                .col-md-6
+                                    a(href="https://tpptop50.com/")
+                                        img.sponsor-img(src="./img/sponsors/tpp.svg")
+                                    p
+                                        | <b>TPP</b> is a cutting-edge software company based in Leeds. We're revolutionising healthcare across
+                                        | the world with our pioneering research and technology solutions. We're doing some amazing things
+                                        | here at TPP and we have some really exciting projects coming up. That's why we're looking for
+                                        | super-intelligent, geeky graduates for a number of vacancies, including our software developer
+                                        | and analyst roles. We don't require any previous experience at all and we offer amazing starting
+                                        | salaries of £40,000 with generous pay rises.
+
+
+
+            div.panel-group
+                div.panel.panel-default
+                    div.panel-heading
+                        h3
                             a(data-toggle="collapse" href="#sp17-18") 2017/18
-                    #sp17-18.panel-collapse.collapse.in
+                    #sp17-18.panel-collapse.collapse
                         div.panel-body
                             .row.sponsor-row
                                 .col-md-6
