Add DurHack 2018 to events

--- a/views/events.pug
+++ b/views/events.pug
@@ -29,10 +29,12 @@ block content
             p.information Mark your calendars for these upcoming events!
 
             .row
-                blockquote
-                    | We have a couple of projects in the works for after exams –
-                    | <button type = button class="sign-up-link btn-link">sign up to our mailing list</button> to be 
-                    | the first to hear about them!
+                img(src="./img/events/events_dh18_dark.png")
+                a.btn.btn-info.btn-block(href="#dh18", data-toggle="collapse") DurHack 2018
+                #dh18.collapse.in
+                    p DurHack is back! Join us from <b>17th–18th November 2018</b> at the <b>Calman Learning Centre</b> for the third edition of DurHack. This year, <b>150</b> hackers from Durham and around the world will be pushing the boundaries of technology to new limits.
+                    p See #[a(href="https://durhack.com") durhack.com] for tickets and more information.
+
 
 
         .col-md-6
