--- a/views/team.pug
+++ b/views/team.pug
@@ -36,7 +36,22 @@ block content
                             p.description
                               | In charge of overseeing everything in the society and reaching out to sponsors.
                           .col-md-3.no-padding
-                            img(src="./img/team/Robbie Jakob-Whitworth.jpg").exec-photo
+                            img(src="./img/team/robbie.jpg").exec-photo
+                  .col-md-6
+                    .panel.panel-info
+                      .panel-heading
+                        h3.position Events Officer
+                        h3.exec-name Karl Southern
+                      .panel-content
+                        .row
+                          .col-md-9
+                            p.description
+                              | Works with sponsors and guest speakers to organise talks and workshops.
+                          .col-md-3.no-padding
+                            img(src="./img/team/karl.jpg").exec-photo
+
+
+                .row
                   .col-md-6
                     .panel.panel-info
                       .panel-heading
@@ -48,8 +63,45 @@ block content
                             p.description
                               | Manages CompSoc's finances.
                           .col-md-3.no-padding
-                            img(src="./img/team/placeholder.png").exec-photo
+                            img(src="./img/team/jess.png").exec-photo
 
+                  .col-md-6
+                    .panel.panel-info
+                      .panel-heading
+                        h3.position Education Officer
+                        h3.exec-name Mitchel Starkie
+                      .panel-content
+                        .row
+                          .col-md-9
+                            p.description
+                              | In charge of educating both society members and/or those interested in programming but with little technical experience.
+                          .col-md-3.no-padding
+                            img(src="./img/team/mitchel.jpg").exec-photo
+                .row
+                  .col-md-6
+                    .panel.panel-info
+                      .panel-heading
+                        h3.position Publicity Officer
+                        h3.exec-name Kat Strachan
+                      .panel-content
+                        .row
+                          .col-md-9
+                            p.description
+                              | In charge of the website content, social media, the mailing list, and promoting the society around the university.
+                          .col-md-3.no-padding
+                            img(src="./img/team/kat.png").exec-photo
+                  .col-md-6
+                    .panel.panel-info
+                      .panel-heading
+                        h3.position Technical Web Officer
+                        h3.exec-name Soumya Singh
+                      .panel-content
+                        .row
+                          .col-md-9
+                            p.description
+                              | Works with the Publicity Officer to manage the technical side of the website.
+                          .col-md-3.no-padding
+                            img(src="./img/team/soumya2.png").exec-photo
                 .row
                   .col-md-6
                     .panel.panel-info
@@ -63,57 +115,7 @@ block content
                               | Responsible for working with sponsors and other organisations to ensure CompSoc runs smoothly, handling
                               | contracts and paperwork.
                           .col-md-3.no-padding
-                            img(src="./img/team/placeholder.png").exec-photo
-                  .col-md-6
-                    .panel.panel-info
-                      .panel-heading
-                        h3.position Education Officer
-                        h3.exec-name Mitchel Starkie
-                      .panel-content
-                        .row
-                          .col-md-9
-                            p.description
-                              | In charge of educating both society members and/or those interested in programming but with little technical experience.
-                          .col-md-3.no-padding
-                            img(src="./img/team/placeholder.png").exec-photo
-                .row
-                  .col-md-6
-                    .panel.panel-info
-                      .panel-heading
-                        h3.position Publicity Officer
-                        h3.exec-name Kat Strachan
-                      .panel-content
-                        .row
-                          .col-md-9
-                            p.description
-                              | In charge of the website content, social media, the mailing list, and promoting the society around the university.
-                          .col-md-3.no-padding
-                            img(src="./img/team/placeholder.png").exec-photo
-                  .col-md-6
-                    .panel.panel-info
-                      .panel-heading
-                        h3.position Technical Web Officer
-                        h3.exec-name Soumya Singh
-                      .panel-content
-                        .row
-                          .col-md-9
-                            p.description
-                              | Works with the Publicity Officer to manage the technical side of the website.
-                          .col-md-3.no-padding
-                            img(src="./img/team/placeholder.png").exec-photo
-                .row
-                  .col-md-6
-                    .panel.panel-info
-                      .panel-heading
-                        h3.position Events Officer
-                        h3.exec-name Karl Southern
-                      .panel-content
-                        .row
-                          .col-md-9
-                            p.description
-                              | Works with sponsors and guest speakers to organise talks and workshops.
-                          .col-md-3.no-padding
-                            img(src="./img/team/placeholder.png").exec-photo
+                            img(src="./img/team/Vivek Mehta.png").exec-photo
                   .col-md-6
                     .panel.panel-info
                       .panel-heading
@@ -125,7 +127,7 @@ block content
                             p.description
                               | General helping hands for all parts of the society.
                           .col-md-3.no-padding
-                            img(src="./img/team/placeholder.png").exec-photo
+                            img(src="./img/team/dmytro.png").exec-photo
       .panel-group
         .panel.panel-default
           .panel-heading
@@ -137,7 +139,7 @@ block content
                 .col-md-1
                 .col-md-2
                   h3 President
-                  img(src="./img/team/Robbie Jakob-Whitworth.jpg").exec-photo
+                  img(src="./img/team/robbie.jpg").exec-photo
                   h3 Robbie Jakob-Whitworth
                 .col-md-2
                   h3 Secretary
