Link to DSU signup rather than Typeform

--- a/views/quickLinks.pug
+++ b/views/quickLinks.pug
@@ -6,6 +6,42 @@
 mixin quickLinks
     link(href="/quickLinks.css" rel="stylesheet")
     div.container.quickLinks
+
+        h1 Upcoming Events
+
+        // Shiny events
+        div.row.events
+            div.col-md-3
+                h2 TPP CompSoc Pub Quiz
+                p.date October 2018
+                p Bring your laptop along so you can try and crack our coding challenge!
+                img(src="/img/events/events_tpp_pub_quiz.jpg")
+
+            div.col-md-3
+                h2 Scott Logic Coding Challenge
+                p.date November 2018
+                p Test your skills against an increasingly challenge AI...
+                img(src="/img/sl_trans.png")
+
+            div.col-md-3.dh18
+                h2 DurHack 2018
+                p.date 17th-18th November 2018
+                p Join 150 hackers from Durham and around the world to push the boundaries of technology.
+                a(href="https://durhack.com")
+                 img(src="/img/dh18_trans.png")
+                a.btn.btn-default.homepage-btn-vertical(href="https://durhack.com" role="button") Find out more &raquo;
+
+            div.col-md-3
+                h2 Arista CompSoc Workshop
+                p.date November 2018
+                p Learn about high performance computing and Arista's career opportunities.
+                img(src="/img/sponsors/arista.svg")
+
+        hr
+
+        h1 Quick Links
+
+        // Nav links
         //- Separate text and buttons into two separate rows
         div.row
             div.col-md-3
