--- a/public/quickLinks.css
+++ b/public/quickLinks.css
@@ -40,3 +40,45 @@
 .quickLinks > h1, h2, h3, h4, h5, h6 {
     margin-top: 0;
 }
+
+.quickLinks h2 {
+    font-size: 24px;
+}
+
+.quickLinks .date {
+    font-size: 12px;
+    color: #696969;
+    /*text-align: center;*/
+}
+
+.quickLinks .dh18 {
+    border: 3px solid #ae95c8;
+    padding: 4px 14px;
+    border-top-left-radius: 10px;
+    box-shadow: 3px 3px 8px 1px rgba(0,0,0,.2);
+    border-bottom-right-radius: 10px;
+    background: #434144;
+    color: #ececec;
+    transition: background 0.2s;
+}
+
+.quickLinks .dh18 .date {
+    color: #dab8e9;
+}
+
+.quickLinks .dh18:hover {
+    background: #545354;
+}
+
+.quickLinks h1 {
+    margin-bottom: 28px;
+    text-align: center;
+}
+
+.quickLinks hr {
+    margin: 35px 0 20px;
+}
+
+.quickLinks {
+    text-align: center;
+}
