--- a/views/templates/base.pug
+++ b/views/templates/base.pug
@@ -10,6 +10,14 @@ html(lang="en")
         link(href="/font-awesome/css/font-awesome.min.css" rel="stylesheet")
         link(href="/indexStyle.css" rel="stylesheet")
         link(href="https://fonts.googleapis.com/css?family=Jura:400,600|Raleway:400,600" rel="stylesheet")
+        // Favicon stuff
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
+        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#a0c0c7">
+        <meta name="msapplication-TileColor" content="#ffffff">
+        <meta name="theme-color" content="#ffffff">
     body
         block nav
         block content
