--- a/views/events.pug
+++ b/views/events.pug
@@ -6,6 +6,7 @@ block append head
     link(href="/events.css" rel="stylesheet")
     script(defer src="https://embed.typeform.com/embed.js")
     script(defer src="/js/typeform.js")
+    script(defer src="/js/load_events.js")
 
 block title
     +pageBanner("Events", "Check out our past and future events")
@@ -27,100 +28,23 @@ block content
         .col-md-6
             h2 What's Next?
             p.information Mark your calendars for these upcoming events!
-
-            .row
-                img(src="./img/events/events_dh18_dark.png")
-                a.btn.btn-info.btn-block(href="#dh18", data-toggle="collapse") DurHack 2018
-                #dh18.collapse.in
-                    p DurHack is back! Join us from <b>17th–18th November 2018</b> at the <b>Calman Learning Centre</b> for the third edition of DurHack. This year, <b>150</b> hackers from Durham and around the world will be pushing the boundaries of technology to new limits.
-                    p See #[a(href="https://durhack.com") durhack.com] for tickets and more information.
-
-
+            
+            .row.loading-gif
+                img.loading(src="./img/loading.gif")
+            
+            #upcoming_events.hidden
+                // Will be filled by load_events.js
 
         .col-md-6
 
             h2 What We've Done!
             p.information Here's all the events we've conducted in the past.
-
-            .row
-                img(src="./img/events/events_tpp_pub_quiz.jpg")
-                a.btn.btn-info.btn-block(href="#tpp", data-toggle="collapse") TPP CompSoc Pub Quiz
-                #tpp.collapse
-                    p Come and join TPP and CompSoc at The Boat Club by Elvet Bridge on 27th February 2018 and test your programming skills in our Pub Quiz. Bring a laptop and your favourite code editor – your problem-solving skills will be tested! Free food, beer, and soft drinks will be provided for all students. We’ll also be giving away great prizes such as Raspberry Pis and Amazon vouchers. With no entry fee, there’s nothing stopping you from assembling a group (max team size 6) of your most intelligent friends and coming along!
-
-            .row
-                img(src="./img/events/events_durhack_2.jpg")
-                a.btn.btn-info.btn-block(href="#dhk2", data-toggle="collapse") DurHack 2017
-                #dhk2.collapse
-                    p CompSoc brought back #[a(href="http://durhack.tech") DurHack] for a second year running and it was a huge success. With #[a(href="http://www.durham.gov.uk/") Durham County Council], #[a(href="https://jobs.barclays.co.uk/") Barclays], #[a(href="https://tpptop50.com/") TPP], #[a(href="https://get.tech") .TECH Domains], #[a(href="https://www.waterstons.com/careers") Waterstons], #[a(href="http://www.entrepreneursdurham.co.uk/") Entrepreneurs Durham], #[a(href="http://www.keyboardco.com/") The Keyboard Company], the #[a(href="https://www.dur.ac.uk/computer.science/") Department of Computer Science] and #[a(href="https://www.durhamsu.com/") Durham Students' Union] on board as sponsors, this event was jam-packed with prizes and was not a hackathon to be missed!
-
-
-            .row
-                img(src="./img/events/thg.png")
-                a.btn.btn-info.btn-block(href="#thg", data-toggle="collapse") THG Company Presentation and Drinks
-                #thg.collapse
-                    p Join THG at 18:00 on 24th October 2017 at ER152, Elvet Riverside, to know more about their company and careers with them, followed by drinks.
-
-
-            .row
-                //a(href="https://durhack.com") DurHack
-                img(src="./img/events/events_Durhack_2017.png")
-                a.btn.btn-info.btn-block(href='#dhk', data-toggle='collapse') Durhack
-                #dhk.collapse
-                    p Durham University had its first ever 24-hour hackathon sponsored by big names like Durham County Council, GitHub, MLH, Sunderland Software City, Durham Students' Union, Entrepreneurs Durham, Waterstons, Barclays, Microsoft and Durham University. With enormous data sets from in and around Durham, participants from various UK universities utilised it to produce something that can potentially make a difference to the region. 24 hours of coding interspersed with workshops, games, VR, short sleep sprints and awesome food, the event was a massive success.
-
-            .row
-                //p
-                //a(href="https://localhackday.mlh.io/") MLH Local Hack Day
-                img(src = "./img/hackday.jpg")
-                //a(href="https://durhack.com")
-                a.btn.btn-info.btn-block(href='#lhd', data-toggle='collapse') MLH Local Hack Day 2017
-                #lhd.collapse
-                    p We organised 12-hour long event for building, problem solving, coding and meeting new people on December 3, 2016 and that turned out to be a success :)
-
-            .row
-                //p
-                //a(href="https://www.facebook.com/events/1322032881161709/") Build-A-Chatbot!
-                img(src = "./img/buildachatbot.jpg")
-                a.btn.btn-info.btn-block(href='#bac', data-toggle='collapse') Build-A-Chatbot!
-                #bac.collapse
-                    p Build-A-Chatbot with Joe Nash, Program Manager at Github. Joe is a functional programmer and hacker with a passion for developer relations and community building, who joined us for a fun evening learning to build a Facebook chatbot.
-
-            .row
-                //p
-                //a(href="https://www.facebook.com/events/1890151881207928/") Introduction to Coding Workshop
-                img(src = "./img/edcode.jpg")
-                .container
-                a.btn.btn-info.btn-block(href='#icw', data-toggle='collapse') Introduction to Coding Workshop
-                #icw.collapse
-                    p We held the first session of a weekly Introduction to Coding Workshop in Collaboration with <a href="http://www.entrepreneursdurham.com/"> Entrepreneurs Durham </a> on November 29 to help people master the skills of web development!
-
-            .row
-                //p
-                //a(href = "https://www.facebook.com/events/369911576674539/") BP Supply and Trading Event.
-                img(src = "./img/about_carousel_3-BP_Supply_And_Trading_2016-17.jpg")
-                .container
-                a.btn.btn-info.btn-block(href='#bpst', data-toggle='collapse') BP Supply and Trading Event
-                #bpst.collapse
-                    p The BP Supply and Trading Event was held on October 24, 2016 where Justin Fay from BP enlightened students about their graduate and placement roles and how technology is integrated into BP's business.
-
-            .row
-                //p
-                //a(href = "https://www.facebook.com/events/1608529472702814/") ScottLogic Durham University Hackathon
-                img(src = "./img/winners.jpg")
-                .container
-                a.btn.btn-info.btn-block(href='#slh', data-toggle='collapse') ScottLogic Durham Hackathon
-                #slh.collapse
-                    p Our sponsors ScottLogic organised a Hackathon on May 4, 2016. Another fun event with code, lots of free pizza and beer!
-
-            .row
-                //p
-                //a(href = "https://www.facebook.com/events/234166873592041/") Dur(h).ac._k
-                img(src = "./img/about_carousel_1-Joe_Nash_Durhack_Initial_Talks_Group_Photo_2016-17.jpg")
-                .container
-                a.btn.btn-info.btn-block(href='#dhack', data-toggle='collapse') Dur(h).ac._k
-                #dhack.collapse
-                    p Joe Nash from PayPal talked to the students on March 2, 2016 about what hackathons are, how they are often misunderstood as attempts to break into systems, and how they are a brilliant opportunity to network with people from all parts of the world, develop new skills and an opportunity to land in a job as well! That's how Joe ended up working at PayPal. The students also got introduced to NodeJS.
-
+            
+            .row.loading-gif
+                img.loading(src="./img/loading.gif")
+            
+            #past_events.hidden
+                // Will be filled by load_events.js
+                
     #sponsor-us-msg.container
         p Interested in running an event with us? #[a(href="/contact") Get in touch].
