--- a/views/quickLinks.pug
+++ b/views/quickLinks.pug
@@ -20,7 +20,7 @@ mixin quickLinks
             div.col-md-3
                 h2 Scott Logic Coding Challenge
                 p.date November 2018
-                p Test your skills against an increasingly challenge AI...
+                p Test your skills against an increasingly challenging AI...
                 img(src="/img/sl_trans.png")
 
             div.col-md-3.dh18
